--- a/portfolio.html
+++ b/portfolio.html
@@ -15,34 +15,44 @@
 <body>
     <header class="header">
         <div class="header-container container">
-            <a lang="en" class="site-logo" href="./">
-                <span class="site-logo__decoration">Web</span>Studio
-            </a>
             <nav class="site-nav">
-                <ul class="site-nav__list list">
-                    <li class="site-nav__item"><a class="site-nav__link" href="./">Студія</a></li>
-                    <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="./portfolio.html">Портфоліо</a></li>
-                    <li class="site-nav__item"><a class="site-nav__link" href="#">Контакти</a></li>
-                </ul>
+                <a lang="en" class="site-logo" href="./">
+                    <span class="site-logo__decoration">Web</span>Studio
+                </a>
+                <button type="button" class="mobile-menu-button js-open-menu js-close-menu" aria-expanded="false"
+                    aria-controls="site-nav__container">
+                    <svg class="mobile-menu__icons" aria-label="Переключатель мобільного меню">
+                        <use class="menu-icon" href="./images/icons.svg#mobile_menu_icon"></use>
+                        <use class="close-icon" href="./images/icons.svg#close_icon"></use>
+                    </svg>
+                </button>
+                <div class="site-nav__container js-menu-container" id="site-nav__container">
+                    <ul class="site-nav__list list">
+                        <li class="site-nav__item"><a class="site-nav__link" href="./">Студія</a>
+                        </li>
+                        <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="./portfolio.html">Портфоліо</a></li>
+                        <li class="site-nav__item"><a class="site-nav__link" href="#">Контакти</a></li>
+                    </ul>
+                    <ul class="header-contacts__list list">
+                        <li class="header-contacts__item">
+                            <a class="header-contacts__email-link" href="mailto:info@devstudio.com">
+                                <svg class="header-contacts__email-icon">
+                                    <use href="./images/icons.svg#icon-envelope"></use>
+                                </svg>
+                                info@devstudio.com
+                            </a>
+                        </li>
+                        <li class="header-contacts__item">
+                            <a class="header-contacts__phone-link" href="tel:+380961111111">
+                                <svg class="header-contacts__phone-icon">
+                                    <use href="./images/icons.svg#icon-smartphone"></use>
+                                </svg>
+                                +38 096 111 11 11
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
-            <ul class="header-contacts__list list">
-                <li class="header-contacts__item">
-                    <a class="header-contacts__email-link" href="mailto:info@devstudio.com">
-                        <svg class="header-contacts__email-icon">
-                            <use href="./images/icons.svg#icon-envelope"></use>
-                        </svg>
-                        info@devstudio.com
-                    </a>
-                </li>
-                <li class="header-contacts__item">
-                    <a class="header-contacts__phone-link" href="tel:+380961111111">
-                        <svg class="header-contacts__phone-icon">
-                            <use href="./images/icons.svg#icon-smartphone"></use>
-                        </svg>
-                        +38 096 111 11 11
-                    </a>
-                </li>
-            </ul>
         </div>
     </header>
     <main>
@@ -224,54 +234,57 @@
     </main>
     <footer class="footer">
         <div class="footer-container container">
-            <div class="footer-contacts-container">
-                <a lang="en" class="site-logo footer__site-logo" href="./">
-                    <span class="site-logo__decoration">Web</span>Studio
-                </a>
-                <address>
-                    <ul class="footer-contacts__list list">
-                        <li class="footer-contacts__physical-address">м. Київ, пр-т Лесі Українки, 26</li>
-                        <li><a class="footer-contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a class="footer-contacts__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <div class="footer-contacts-social-container">
+                <div class="footer-contacts-container">
+                    <a lang="en" class="site-logo footer__site-logo" href="./">
+                        <span class="site-logo__decoration">Web</span>Studio
+                    </a>
+                    <address>
+                        <ul class="footer-contacts__list list">
+                            <li class="footer-contacts__physical-address">м. Київ, пр-т Лесі Українки, 26</li>
+                            <li><a class="footer-contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                            </li>
+                            <li><a class="footer-contacts__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer-social-container">
+                    <p class="footer-social-container_name">Приєднуйтесь</p>
+                    <ul class="footer-social__list list">
+                        <li class="footer-social__item">
+                            <a class="footer-social__link" href="https://instagram.com/" target="_blank"
+                                rel="noopener noreferrer">
+                                <svg class="footer-social__icon">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social__item">
+                            <a class="footer-social__link" href="https://twitter.com/" target="_blank"
+                                rel="noopener noreferrer">
+                                <svg class="footer-social__icon">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social__item">
+                            <a class="footer-social__link" href="https://facebook.com/" target="_blank"
+                                rel="noopener noreferrer">
+                                <svg class="footer-social__icon">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-social__item">
+                            <a class="footer-social__link" href="https://linkedin.com/" target="_blank"
+                                rel="noopener noreferrer">
+                                <svg class="footer-social__icon">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
-                </address>
-            </div>
-            <div class="footer-social-container">
-                <p class="footer-social-container_name">Приєднуйтесь</p>
-                <ul class="footer-social__list list">
-                    <li class="footer-social__item">
-                        <a class="footer-social__link" href="https://instagram.com/" target="_blank"
-                            rel="noopener noreferrer">
-                            <svg class="footer-social__icon">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social__item">
-                        <a class="footer-social__link" href="https://twitter.com/" target="_blank"
-                            rel="noopener noreferrer">
-                            <svg class="footer-social__icon">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social__item">
-                        <a class="footer-social__link" href="https://facebook.com/" target="_blank"
-                            rel="noopener noreferrer">
-                            <svg class="footer-social__icon">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social__item">
-                        <a class="footer-social__link" href="https://linkedin.com/" target="_blank"
-                            rel="noopener noreferrer">
-                            <svg class="footer-social__icon">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                </div>
             </div>
             <div class="footer-subscribe">
                 <p class="footer-subscribe__name">Підпишіться на розсилку</p>
@@ -287,5 +300,9 @@
             </div>
         </div>
     </footer>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="js/mobile-menu.js"></script>
 </body>
 </html>
