--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                 </a>
                 <button 
                     type="button"
-                    class="mobile-menu-button js-open-menu js-close-menu" 
+                    class="mobile-menu-button" 
                     aria-expanded="false" 
-                    aria-controls="site-nav__container">
+                    aria-controls="site-nav__container" data-menu-button>
                     <svg class="mobile-menu__icons" aria-label="Переключатель мобільного меню">
                         <use class="menu-icon" href="./images/icons.svg#mobile_menu_icon"></use>
                         <use class="close-icon" href="./images/icons.svg#close_icon"></use>
                     </svg>
                 </button>
-                <div class="site-nav__container js-menu-container" id="site-nav__container">
+                <div class="site-nav__container" id="site-nav__container" data-menu>
                     <ul class="site-nav__list list">
                         <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href="./">Студія</a></li>
                         <li class="site-nav__item"><a class="site-nav__link" href="./portfolio.html">Портфоліо</a></li>
@@ -51,6 +51,20 @@
                                 </svg>
                                 +38 096 111 11 11
                             </a>
+                        </li>
+                    </ul>
+                    <ul class="mobile-menu__social-list list">
+                        <li class="mobile-menu__social-item">
+                            <a class="mobile-menu__social-link" href="#">Instagram</a>
+                        </li>
+                        <li class="mobile-menu__social-item">
+                            <a class="mobile-menu__social-link" href="#">Twitter</a>
+                        </li>
+                        <li class="mobile-menu__social-item">
+                            <a class="mobile-menu__social-link" href="#">Facebook</a>
+                        </li>
+                        <li class="mobile-menu__social-item">
+                            <a class="mobile-menu__social-link" href="#">LinkedIn</a>
                         </li>
                     </ul>
                 </div>
@@ -144,7 +158,14 @@
                 <h2 class="company-team__title">Наша команда</h2>
                 <ul class="company-team__list list">
                     <li class="company-team__item">
-                        <img src="./images/igordemyanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+                        <img 
+                        srcset="
+                        ./images/igordemyanenko.jpg 1x
+                        ./images/igordemyanenko_354.jpg 2x
+                        ./images/igordemyanenko_450.jpg 3x"
+                        src="./images/igordemyanenko_450.jpg" 
+                        alt="Ігор Дем'яненко" 
+                        width="450">
                         <div class="employee-description">
                             <h3 class="employee-description__name">Ігор Дем'яненко</h3>
                             <p class="employee-description__position">Product Designer</p>
@@ -498,7 +519,7 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
         crossorigin="anonymous"></script>
-    <script defer src="js/mobile-menu.js"></script>
+    <script defer src="js/menu.js"></script>
     <script src="./js/modal.js"></script>
 </body>
 </html>
