employee images optimization

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <li class="company-team__item">
                         <img 
                         srcset="
-                        ./images/igordemyanenko.jpg 1x
+                        ./images/igordemyanenko_270.jpg 1x
                         ./images/igordemyanenko_354.jpg 2x
                         ./images/igordemyanenko_450.jpg 3x"
                         src="./images/igordemyanenko_450.jpg" 
@@ -202,7 +202,14 @@
                         </div>
                     </li>
                     <li class="company-team__item">
-                        <img src="./images/olgarepina.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                        <!-- <img src="./images/olgarepina_270.jpg" alt="Ольга Рєпіна" width="270" height="260"> -->
+                        <img 
+                        srcset="./images/olgarepina_270.jpg 1x
+                                ./images/olgarepina_354.jpg 2x
+                                ./images/olgarepina_450.jpg 3x"
+                        src="./images/olgarepina_450.jpg" 
+                        alt="Ольга Рєпіна" 
+                        width="450">
                         <div class="employee-description">
                             <h3 class="employee-description__name">Ольга Рєпіна</h3>
                             <p class="employee-description__position">Frontend Developer</p>
@@ -239,7 +246,14 @@
                         </div>
                     </li>
                     <li class="company-team__item">
-                        <img src="./images/mykolatarasov.jpg" alt="Микола Тарасов" width="270" height="260">
+                        <!-- <img src="./images/mykolatarasov_270.jpg" alt="Микола Тарасов" width="270" height="260"> -->
+                        <img 
+                        srcset="./images/mykolatarasov_270.jpg 1x
+                                ./images/mykolatarasov_354.jpg 2x
+                                ./images/mykolatarasov_450.jpg 3x" 
+                        src="./images/mykolatarasov_450.jpg" 
+                        alt="Микола Тарасов"
+                        width="450">
                         <div class="employee-description">
                             <h3 class="employee-description__name">Микола Тарасов</h3>
                             <p class="employee-description__position">Marketing</p>
@@ -276,7 +290,14 @@
                         </div>
                     </li>
                     <li class="company-team__item">
-                        <img src="./images/mykhailoyermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
+                        <!-- <img src="./images/mykhailoyermakov_270.jpg" alt="Михайло Єрмаков" width="270" height="260"> -->
+                        <img 
+                        srcset="./images/mykhailoyermakov_270.jpg 1x
+                                ./images/mykhailoyermakov_354.jpg 2x
+                                ./images/mykhailoyermakov_450.jpg 3x" 
+                        src="./images/mykhailoyermakov_450.jpg" 
+                        alt="Михайло Єрмаков"
+                        width="450">
                         <div class="employee-description">
                             <h3 class="employee-description__name">Михайло Єрмаков</h3>
                             <p class="employee-description__position">UI Designer</p>
