mobile tablet index

--- a/index.html
+++ b/index.html
@@ -160,9 +160,10 @@
                     <li class="company-team__item">
                         <img 
                         srcset="
-                        ./images/igordemyanenko_270.jpg 1x
-                        ./images/igordemyanenko_354.jpg 2x
-                        ./images/igordemyanenko_450.jpg 3x"
+                        ./images/igordemyanenko_270.jpg 270w,
+                        ./images/igordemyanenko_354.jpg 354w,
+                        ./images/igordemyanenko_450.jpg 450w
+                        "
                         src="./images/igordemyanenko_450.jpg" 
                         alt="Ігор Дем'яненко" 
                         width="450">
