--- a/portfolio.html
+++ b/portfolio.html
@@ -19,14 +19,14 @@
                 <a lang="en" class="site-logo" href="./">
                     <span class="site-logo__decoration">Web</span>Studio
                 </a>
-                <button type="button" class="mobile-menu-button js-open-menu js-close-menu" aria-expanded="false"
-                    aria-controls="site-nav__container">
+                <button type="button" class="mobile-menu-button" aria-expanded="false" aria-controls="site-nav__container"
+                    data-menu-button>
                     <svg class="mobile-menu__icons" aria-label="Переключатель мобільного меню">
                         <use class="menu-icon" href="./images/icons.svg#mobile_menu_icon"></use>
                         <use class="close-icon" href="./images/icons.svg#close_icon"></use>
                     </svg>
                 </button>
-                <div class="site-nav__container js-menu-container" id="site-nav__container">
+                <div class="site-nav__container" id="site-nav__container" data-menu>
                     <ul class="site-nav__list list">
                         <li class="site-nav__item"><a class="site-nav__link" href="./">Студія</a>
                         </li>
@@ -49,6 +49,20 @@
                                 </svg>
                                 +38 096 111 11 11
                             </a>
+                        </li>
+                    </ul>
+                    <ul class="mobile-menu__social-list list">
+                        <li class="mobile-menu__social-item">
+                            <a class="mobile-menu__social-link" href="#">Instagram</a>
+                        </li>
+                        <li class="mobile-menu__social-item">
+                            <a class="mobile-menu__social-link" href="#">Twitter</a>
+                        </li>
+                        <li class="mobile-menu__social-item">
+                            <a class="mobile-menu__social-link" href="#">Facebook</a>
+                        </li>
+                        <li class="mobile-menu__social-item">
+                            <a class="mobile-menu__social-link" href="#">LinkedIn</a>
                         </li>
                     </ul>
                 </div>
@@ -303,6 +317,6 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
         crossorigin="anonymous"></script>
-    <script defer src="js/mobile-menu.js"></script>
+    <script defer src="js/menu.js"></script>
 </body>
 </html>
