--- a/index.html
+++ b/index.html
@@ -128,7 +128,12 @@
                 <ul class="company-works-list list">
                     <li class="company-works__item">
                         <div class="company-works__content">
-                            <img src="./images/work1.jpg" alt="Десктопні додадтки" width="370" height="295">
+                            <img 
+                            srcset="./images/work1_370.jpg 1x,
+                                    ./images/work1_370@2x.jpg 2x"
+                            src="./images/work1_370.jpg" 
+                            alt="Десктопні додадтки" 
+                            width="370">
                             <div class="company-works__description">
                                 <h3 class="company-works__work-title">Десктопні додатки</h3>
                             </div>
@@ -136,7 +141,12 @@
                     </li>
                     <li class="company-works__item">
                         <div class="company-works__content">
-                            <img src="./images/work2.jpg" alt="Мобільні додатки" width="370" height="295">
+                            <img 
+                            srcset="./images/work2_370.jpg 1x,
+                                    ./images/work2_370@2x.jpg 2x"
+                            src="./images/work2_370.jpg" 
+                            alt="Мобільні додатки" 
+                            width="370">
                             <div class="company-works__description">
                                 <h3 class="company-works__work-title">Мобільні додатки</h3>
                             </div>
@@ -144,7 +154,12 @@
                     </li>
                     <li class="company-works__item">
                         <div class="company-works__content">
-                            <img src="./images/work3.jpg" alt="Дизайнерські рішення" width="370" height="295">
+                            <img 
+                            srcset="./images/work3_370.jpg 1x,
+                                    ./images/work3_370@2x.jpg 2x"
+                            src="./images/work3_370.jpg" 
+                            alt="Дизайнерські рішення" 
+                            width="370">
                             <div class="company-works__description">
                                 <h3 class="company-works__work-title">Дизайнерські рішення</h3>
                             </div>
