--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,13 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <img src="./images/technocrack.jpg" alt="Технокряк" width="370" height="295">
+                                <!-- <img src="./images/technocrack.jpg" alt="Технокряк" width="370" height="295"> -->
+                                <picture>
+                                    <source srcset="./images/technocrack_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
+                                    <source srcset="./images/technocrack_354.jpg" media="(min-width: 768px)" type="image/jpeg">
+                                    <source srcset="./images/technocrack_450.jpg" media="(min-width: 480px)" type="image/jpeg">
+                                    <img src="./images/technocrack_450.jpg" alt="Технокряк">
+                                </picture>
                                 <div class="projects__project-description">
                                     <p class="projects__description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -101,7 +107,13 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <img src="./images/poster_new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="295">
+                                <!-- <img src="./images/poster_new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="295"> -->
+                                <picture>
+                                    <source srcset="./images/poster_new-orlean_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
+                                    <source srcset="./images/poster_new-orlean_354.jpg" media="(min-width: 768px)" type="image/jpeg">
+                                    <source srcset="./images/poster_new-orlean_450.jpg" media="(min-width: 480px)" type="image/jpeg">
+                                    <img src="./images/poster_new-orlean_450.jpg" alt="Постер New Orlean vs Golden Star">
+                                </picture>
                                 <div class="projects__project-description">
                                     <p class="projects__description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -119,7 +131,13 @@
                     <li class="projects__item">
                         <a class="projects__link" href="">
                             <div class="projects__description-container">
-                                <img src="./images/restaurant_seafood.jpg" alt="Ресторан Seafood" width="370" height="295">
+                                <!-- <img src="./images/restaurant_seafood.jpg" alt="Ресторан Seafood" width="370" height="295"> -->
+                                <picture>
+                                    <source srcset="./images/restaurant_seafood_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
+                                    <source srcset="./images/restaurant_seafood_354.jpg" media="(min-width: 768px)" type="image/jpeg">
+                                    <source srcset="./images/restaurant_seafood_450.jpg" media="(min-width: 480px)" type="image/jpeg">
+                                    <img src="./images/restaurant_seafood_450.jpg" alt="Ресторан Seafood">
+                                </picture>
                                 <div class="projects__project-description">
                                     <p class="projects__description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -137,7 +155,13 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <img src="./images/project_prime.jpg" alt="Проєкт Prime" width="370" height="295">
+                                <!-- <img src="./images/project_prime.jpg" alt="Проєкт Prime" width="370" height="295"> -->
+                                <picture>
+                                    <source srcset="./images/project_prime_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
+                                    <source srcset="./images/project_prime_354.jpg" media="(min-width: 768px)" type="image/jpeg">
+                                    <source srcset="./images/project_prime_450.jpg" media="(min-width: 480px)" type="image/jpeg">
+                                    <img src="./images/project_prime_450.jpg" alt="Проєкт Prime">
+                                </picture>
                                 <div class="projects__project-description">
                                     <p class="projects__description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -155,7 +179,13 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <img src="./images/project_boxes.jpg" alt="Проєкт Boxes" width="370" height="295">
+                                <!-- <img src="./images/project_boxes.jpg" alt="Проєкт Boxes" width="370" height="295"> -->
+                                <picture>
+                                    <source srcset="./images/project_boxes_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
+                                    <source srcset="./images/project_boxes_354.jpg" media="(min-width: 768px)" type="image/jpeg">
+                                    <source srcset="./images/project_boxes_450.jpg" media="(min-width: 480px)" type="image/jpeg">
+                                    <img src="./images/project_boxes_450.jpg" alt="Проєкт Boxes">
+                                </picture>
                                 <div class="projects__project-description">
                                     <p class="projects__description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -173,7 +203,13 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <img src="./images/inspiration_has_no_borders.jpg" alt="Inspiration has no Borders" width="370" height="295">
+                                <!-- <img src="./images/inspiration_has_no_borders.jpg" alt="Inspiration has no Borders" width="370" height="295"> -->
+                                <picture>
+                                    <source srcset="./images/inspiration_has_no_borders_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
+                                    <source srcset="./images/inspiration_has_no_borders_354.jpg" media="(min-width: 768px)" type="image/jpeg">
+                                    <source srcset="./images/inspiration_has_no_borders_450.jpg" media="(min-width: 480px)" type="image/jpeg">
+                                    <img src="./images/inspiration_has_no_borders_450.jpg" alt="Inspiration has no Borders">
+                                </picture>
                                 <div class="projects__project-description">
                                     <p class="projects__description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -191,7 +227,13 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <img src="./images/book_limited-edition.jpg" alt="Видання Limited Edition" width="370" height="295">
+                                <!-- <img src="./images/book_limited-edition.jpg" alt="Видання Limited Edition" width="370" height="295"> -->
+                                <picture>
+                                    <source srcset="./images/book_limited-edition_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
+                                    <source srcset="./images/book_limited-edition_354.jpg" media="(min-width: 768px)" type="image/jpeg">
+                                    <source srcset="./images/book_limited-edition_450.jpg" media="(min-width: 480px)" type="image/jpeg">
+                                    <img src="./images/book_limited-edition_450.jpg" alt="Видання Limited Edition">
+                                </picture>
                                 <div class="projects__project-description">
                                     <p class="projects__description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -209,7 +251,13 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <img src="./images/project_lab.jpg" alt="Проєкт LAB" width="370" height="295">
+                                <!-- <img src="./images/project_lab.jpg" alt="Проєкт LAB" width="370" height="295"> -->
+                                <picture>
+                                    <source srcset="./images/project_lab_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
+                                    <source srcset="./images/project_lab_354.jpg" media="(min-width: 768px)" type="image/jpeg">
+                                    <source srcset="./images/project_lab_450.jpg" media="(min-width: 480px)" type="image/jpeg">
+                                    <img src="./images/project_lab_450.jpg" alt="Проєкт LAB">
+                                </picture>
                                 <div class="projects__project-description">
                                     <p class="projects__description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
@@ -227,7 +275,13 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <img src="./images/growing-business.jpg" alt="Growing Business" width="370" height="295">
+                                <!-- <img src="./images/growing-business.jpg" alt="Growing Business" width="370" height="295"> -->
+                                <picture>
+                                    <source srcset="./images/growing-business_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
+                                    <source srcset="./images/growing-business_354.jpg" media="(min-width: 768px)" type="image/jpeg">
+                                    <source srcset="./images/growing-business_450.jpg" media="(min-width: 480px)" type="image/jpeg">
+                                    <img src="./images/growing-business_450.jpg" alt="Growing Business">
+                                </picture>
                                 <div class="projects__project-description">
                                     <p class="projects__description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
